# lancedb-c

./: .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  valgrind.supp
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: .gitkeep
docs/api/: index.rst
examples/: full.cpp  s3.cpp  s3vector.cc  s3vector.h  simple.c  simple.cpp
include/: lancedb.h
src/: connection.rs  error.rs  query.rs
tests/: test_common.cpp  test_common.h  test_connection.cpp  test_index.cpp  test_main.cpp  test_query.cpp  test_table.cpp  test_vector_index.cpp  test_vector_query.cpp
